# lab3-tester

./: .travis.yml  CMakeLists.txt  README.md  variant.cpp  variant.h.in
VARIANTS/: CMakeLists.txt  VARIANT_1.cpp  VARIANT_1000.cpp  VARIANT_15.cpp  VARIANT_9.cpp
src/: CMakeLists.txt  README.md  variant.cpp  variant.h.in
test/: CMakeLists.txt  main.cpp
variants_descriptions/: README.md  VARIANT_1  VARIANT_10  VARIANT_11  VARIANT_12  VARIANT_13  VARIANT_15  VARIANT_16  VARIANT_17  VARIANT_18  VARIANT_19  VARIANT_2  VARIANT_20  VARIANT_3  VARIANT_4  VARIANT_5  VARIANT_6  VARIANT_7  VARIANT_8  VARIANT_9
