project( VARIANTS )
file( GLOB_RECURSE SOURCE_FILES "*.cpp" )
#if( EXISTS ${SOURCE_FILES} )
if( SOURCE_FILES )
    #message( "VARIANTS: All the files has been found" )
    message( ${SOURCE_FILES})
    add_library( VARIANTS STATIC ${SOURCE_FILES} )
    set_property( TARGET VARIANTS PROPERTY COMPILE_OPTIONS -pthread)
else()
    message( "VARIANTS: No files was found" )
endif()
